Added instructions for adding new flag to VM opttions.